# polyml-rs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  SECURITY.md
crates/polyml-bin/: Cargo.toml
crates/polyml-bin/src/: main.rs
crates/polyml-bin/tests/: cli_run.rs  concurrency_alloc_storm.rs  concurrency_exit.rs  concurrency_fuzz.rs  concurrency_interrupt.rs  concurrency_mutex_demo.rs  concurrency_mutex_hammer.rs  concurrency_parallel.rs  concurrency_preempt.rs  concurrency_server.rs  concurrency_sockets.rs  concurrency_stdin_park.rs  export_roundtrip_live.rs  ffi_calls.rs  ffi_memory.rs  golden_sml.rs  hol4_arith.rs  hol4_datatype.rs  hol4_defn.rs  hol4_fancy.rs  hol4_induction.rs  hol4_list.rs  hol4_meson.rs  hol4_metis.rs  hol4_num_prover.rs  hol4_numsimps.rs  hol4_order.rs  hol4_pair.rs  hol4_parse.rs  hol4_pelletier.rs  hol4_prim_rec.rs  hol4_recon.rs  hol4_rewrite.rs  hol4_simp.rs  hol4_summation.rs  hol4_tactic.rs  hol4_taut.rs  hol4_theories.rs  hol4_theory.rs  intflip_basis.rs  (+72 more)
crates/polyml-bin/tests/common/: mod.rs
crates/polyml-bin/tests/concurrency_support/: alloc_storm_demo.sml  exit_inversion_demo.sml  interrupt_demo.sml  mutex_demo.sml  mutex_hammer_demo.sml  parallel_scaling_demo.sml  parallel_server_demo.sml  preempt_demo.sml  racy_ref_demo.sml  socket_threads_demo.sml  stdin_park_demo.sml
crates/polyml-bin/tests/golden/: 01_clean_exit.expected  02_type_error.expected  02_type_error.sml  03_lambda_apply.expected  03_lambda_apply.sml  04_addition_with_overload.expected  04_addition_with_overload.sml  05_polyml_print.expected  05_polyml_print.sml  06_pattern_match_tuple.expected  06_pattern_match_tuple.sml  07_let_local.expected  07_let_local.sml  08_record.expected  08_record.sml  09_exception_handle.expected  09_exception_handle.sml  10_higher_order.expected  10_higher_order.sml  11_datatype.expected  11_datatype.sml
crates/polyml-bin/tests/hol4_support/: arith_frag_tc_block.sml  arithmetic_sweep.sml  basicsize_inline.sml  basicsize_sweep.sml  build_arith_checkpoint.sml  build_bool_checkpoint.sml  build_combin_checkpoint.sml  build_datatype_checkpoint.sml  build_defn_checkpoint.sml  build_kernel_checkpoint.sml  build_marker_checkpoint.sml  build_meson_checkpoint.sml  build_metis_checkpoint.sml  build_num_checkpoint.sml  build_numsimps_checkpoint.sml  build_order_checkpoint.sml  build_parse_checkpoint.sml  build_prim_rec_checkpoint.sml  build_relation_checkpoint.sml  build_rewrite_checkpoint.sml  build_simp_checkpoint.sml  build_tactic_checkpoint.sml  build_taut_checkpoint.sml  decide_shim.sml  fancy_proofs.sml  gcd_verified.sml  ind_type_sweep.sml  insertion_sort_verified.sml  list_append_axiomatized.sml  list_laws_verified.sml  list_theory_demo.sml  measure_frag.sml  merge_sort_verified.sml  num_arith_trophy.sml  numeral_frag_wf_less.sml  numeral_sweep.sml  numpair_bijection_splice.sml  numpair_sweep.sml  one_sweep.sml  option_sweep.sml  (+15 more)
crates/polyml-bin/tests/hol4_support/arith_splices/: ABS_DIFF_EQ_0.sml  EXP_BASE_INJECTIVE.sml  EXP_BASE_LEQ_MONO_IMP.sml  EXP_LE_1.sml  EXP_LE_MONO_0.sml  FACT_iff.sml  MAX_0.sml  MIN_0.sml  MODEQ_NONZERO_MODEQUALITY.sml  MULT_RIGHT_CANCEL.sml  README  SUB_LESS.sml  SUC_ELIM_THM.sml
crates/polyml-bin/tests/isabelle_support/: isabelle_arithmetic.sml  isabelle_binom.sml  isabelle_binom_thm.sml  isabelle_cassini_lattice.sml  isabelle_central_binomial.sml  isabelle_classical_primes.sml  isabelle_combinatorics.sml  isabelle_crt.sml  isabelle_divisibility.sml  isabelle_division.sml  isabelle_euclid.sml  isabelle_euclid_lemma.sml  isabelle_euclid_list.sml  isabelle_euclid_perfect.sml  isabelle_euler.sml  isabelle_euler_converse.sml  isabelle_euler_converse_close.sml  isabelle_euler_converse_dl2.sml  isabelle_euler_converse_sigma_mult.sml  isabelle_euler_criterion.sml  isabelle_euler_foundations.sml  isabelle_fibonacci.sml  isabelle_flt.sml  isabelle_four_square.sml  isabelle_fta.sml  isabelle_fta_unique.sml  isabelle_gcd.sml  isabelle_list_theory.sml  isabelle_modular.sml  isabelle_mult_group.sml  isabelle_neg1_qr.sml  isabelle_ntbase.sml  isabelle_number_theory.sml  isabelle_object_logic.sml  isabelle_ordering.sml  isabelle_parallel_compute.sml  isabelle_parallel_kernel.sml  isabelle_parallel_proving.sml  isabelle_power.sml  isabelle_primes.sml  (+22 more)
crates/polyml-bin/tests/isabelle_support/qr_resume/: .gitignore  (+9 more)
crates/polyml-bin/tests/socket_support/: echo_demo.sml
crates/polyml-image/: Cargo.toml
crates/polyml-image/src/: bicimage.rs  lib.rs  pexport.rs
crates/polyml-image/tests/: bicimage_fuzz.rs  bootstrap_image.rs
crates/polyml-jit/: Cargo.toml
crates/polyml-jit/src/: bench.rs  boundary.rs  differential.rs  lib.rs  memtrans.rs  region.rs  translate.rs
crates/polyml-jit/tests/: call_const_addr_differential.rs  case16_differential.rs  coverage_bootstrap.rs  differential_basic.rs  execute_matches_interpreter.rs  interp_dispatches_to_jit.rs  interp_jit_cache_dispatch.rs  jit_bootstrap_run.rs  jit_call_const_addr8_end_to_end.rs  jit_calls_jit.rs  jit_closure_alloc.rs  jit_speedup_bench.rs  jit_tuple_alloc.rs  tail_b_b_differential.rs
crates/polyml-runtime/: Cargo.toml
crates/polyml-runtime/examples/: do_call_bad_code_word.rs  embed_run_image.rs  export_code_obj_bad_trailer.rs  gc_code_obj_bad_trailer.rs  gc_tiny_heap_stress.rs  indirect_local_type_confusion.rs  loader_accepts_bad_nonroot_closure.rs  poly_string_to_rust_oob.rs  read_array_oob_write.rs  write_array_oob.rs
crates/polyml-runtime/src/: env.rs  export.rs  gc.rs  interrupt.rs  jit_bridge.rs  length_word.rs  lib.rs  loader.rs  poly_word.rs  rts.rs  sched.rs  session.rs  space.rs
crates/polyml-runtime/src/interpreter/: diag.rs  disasm.rs  mod.rs  opcodes.rs  safe_deref.rs
crates/polyml-runtime/tests/: concurrency_gc_handshake.rs  disassemble_bootstrap.rs  do_call_type_confusion.rs  exec_bootstrap.rs  exec_bootstrap_profile.rs  export_corrupt_code_oob_repro.rs  export_roundtrip.rs  export_roundtrip_fuzz.rs  gc_tiny_heap_uaf.rs  interp_on_real_heap.rs  load_bootstrap.rs  read_pc_const_oob.rs
(+547 files in other folders)
