[workspace]
resolver = "3"
members = [
    "crates/polyml-runtime",
    "crates/polyml-image",
    "crates/polyml-bin",
    "crates/polyml-jit",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bryanw/polyml-rs"
authors = ["Bryan Egan <bryan.egan@gmail.com>"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy for systems code
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# We reference C/C++ identifiers from upstream PolyML in doc comments
# (e.g. MA_Interpreted, globalHeapBase). Backticking them is style noise.
doc_markdown = "allow"
# `clippy::missing_const_for_fn` is nursery and over-eager — it flags
# functions taking &Vec, functions doing pointer writes, etc., that
# can't actually be const-evaluated. We add const where it's both
# possible and useful (data primitives) by hand instead.
missing_const_for_fn = "allow"

[workspace.dependencies]
polyml-runtime = { path = "crates/polyml-runtime" }
polyml-image   = { path = "crates/polyml-image" }

# Profile tuning: dev builds should be fast; release should be optimized
# but with overflow checks for debugging miscompilation.
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 1
overflow-checks = false

[profile.release-debug]
inherits = "release"
debug = 2
overflow-checks = true
