[package]
name        = "polyml-image"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "PolyML heap-image formats: pexport reader/writer (and eventually bicimage)"

[lints]
workspace = true
