[package]
name        = "polyml-image"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
publish.workspace      = true
description = "PolyML heap-image formats: the pexport text reader/writer and the compact binary bicimage format"

[dependencies]
bitflags = "2.6"
thiserror = "2"

[lints]
workspace = true
