[package]
name        = "polyml-runtime"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "PolyML runtime: heap, GC, scheduler, FFI, exceptions"

[dependencies]
polyml-image = { workspace = true }
thiserror = "2"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
libc = "0.2"

[lints]
workspace = true
